src/objects/TR1__Availability_Time_Periods__mdt.object
<CustomObject>
    <fields>
        <fullName>TR1__Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__End_Time__c</fullName>
        <label>End Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To mark default value of the time period</description>
        <label>IsDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Start_Time__c</fullName>
        <label>Start Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Availability Time Periods</label>
    <pluralLabel>Availability Time Periods</pluralLabel>
</CustomObject>